--- a/assignment/bookReview/01.html
+++ b/assignment/bookReview/01.html
@@ -7,7 +7,7 @@
     <style>
 
         body{
-            background-image: url(/assignment/book_review/images/library-book-shelf.webp);
+            background-image: url(/assignment/images/library-book-shelf.webp);
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
@@ -88,7 +88,7 @@
     <header>
         <nav class="container">
             <div class="logo">
-                <img src="/assignment/book_review/images/logo project.png" alt="">
+                <img src="/assignment/images/logo project.png" alt="">
             </div>
             <div class="links">
                 <a href="Home">Home</a>
@@ -101,7 +101,7 @@
     <div class="body-container">
         <div class="image">
                 <aside style="float: right; margin-left: 10px;">
-                    <img src="/assignment/book_review/images/harry potter.webp " alt="" height="300px">
+                    <img src="/assignment/images/harry potter.webp " alt="" height="300px">
                 </aside> 
                 <h3><u>Harry Potter And The Order Of The Phoenix</u></h3>
                 <p>"Harry Potter and the Order of the Phoenix" follows Harry's fifth year at Hogwarts, where he faces the return of Voldemort and the skepticism of the wizarding world. He forms Dumbledore's Army to combat the oppressive regime of the Ministry of Magic. The story delves into themes of resistance, loyalty, and the cost of fighting evil. By 2007, over 55 million copies had been sold .</p>
@@ -111,7 +111,7 @@
         </div>
         <div class="image">
             <aside style="float: right; margin-left: 10px;">
-                <img src="/assignment/book_review/images/secrets of dumbeldore.jpg" alt="" height="300px">
+                <img src="/assignment/images/secrets of dumbeldore.jpg" alt="" height="300px">
             </aside> 
             <h3><u>Fantastic Beasts: The Secrets of Dumbledore</u></h3>
             <p>"Fantastic Beasts: The Secrets of Dumbledore" follows Newt Scamander and his allies as they uncover hidden truths about Dumbledore's past and work to stop Grindelwald's dark rise to power. The film explores themes of loyalty, friendship, and the struggle between good and evil in the wizarding world, blending magical creatures, intense battles, and deep secrets. And sold over like a million copies .</p>
@@ -121,7 +121,7 @@
         </div>
         <div class="image">
             <aside style="float: right; margin-left: 10px;">
-                <img src="/assignment/book_review/images/atomic habits.jpg" alt="" height="300px">
+                <img src="/assignment/images/atomic habits.jpg" alt="" height="300px">
             </aside> 
             <h3><u>Atomic Habits</u></h3>
             <p>"Atomic Habits" is a practical guide to building good habits and breaking bad ones. Clear emphasizes small, consistent actions, or "atomic habits," that compound over time to produce remarkable results. He outlines a framework of four steps: cue, craving, response, and reward, to help readers understand and modify their habits effectively. By focusing on identity-based habits and creating systems rather than goals .</p>   
