--- a/zerodha/html/01.html
+++ b/zerodha/html/01.html
@@ -10,7 +10,7 @@
         <header>
             <nav>
                 <div style="display: flex; justify-content: space-evenly;font-size: small;margin-top: 20px;">
-                    <img src="/images/logo.svg" alt="zerodha logo" style="height: 15px;">
+                    <img src="/zerodha/images/logo.svg" alt="zerodha logo" style="height: 15px;">
                     <a href="">Signup</a>
                     <a href="">About</a>
                     <a href="">Products</a>
@@ -20,14 +20,14 @@
             </nav>
         </header>
         <div style="text-align: center;">
-            <img src="/images/landing.png" alt="" style="height: 350px; margin-top: 65px;">
+            <img src="/zerodha/images/landing.png" alt="" style="height: 350px; margin-top: 65px;">
             <h2>Invest in everything</h2>
             <h3>Online platform to invest in stocks. derivatives, mutual funds, and more</h3>
             <button type="button" style="height: 25px; width: 100px;margin-top: 30px;">Signup Now</button>
         </div>
             <div>
                     <div style="display: flex; justify-content: center;">
-                        <img src="/images/largest-broker.svg" alt="" height="400px" width="400px">
+                        <img src="/zerodha/images/largest-broker.svg" alt="" height="400px" width="400px">
                         <aside style="padding: 80px;">
                             <h2>Largest stock broker in India</h2>
                             <p>1.5+ Crore Zerodha clients contribute to over 15% of all retail order <br> volumes in India daily by trading and investing in:</p>
@@ -72,7 +72,7 @@
                     </div>
                     <div style="margin-left: 70px;">
                         <aside>
-                            <img src="/images/ecosystem.png" alt="" height="600px">
+                            <img src="/zerodha/images/ecosystem.png" alt="" height="600px">
                         </aside>
                     </div>
                 </div>
